--- a/sukiru.html
+++ b/sukiru.html
@@ -125,7 +125,6 @@
           <div class="row justify-content-center text-center mb-4">
             <div class="col-5">
               <h3 class="h3 heading">More Works</h3>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit explicabo inventore.</p>
             </div>
           </div>
 
@@ -179,7 +178,7 @@
               <a href="work-single.html" class="item-wrap fancybox">
                 <div class="work-info">
                   <h3>Amazon</h3>
-                  <span>brandingn</span>
+                  <span>branding</span>
                 </div>
                 <img class="img-fluid" src="img/img_6.jpg">
               </a>
