--- a/about.html
+++ b/about.html
@@ -88,8 +88,7 @@
           <div class="col-md-6" data-aos="fade-up">
 
             <h2>About</h2>
-            <p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam necessitatibus incidunt ut
-              officiis explicabo inventore.</p>
+            <p class="mb-0">Make this a very simple introduction to who I am. Get to know more about my education, and extracurriculars. </p>
           </div>
 
         </div>
@@ -97,73 +96,19 @@
 
         <div class="row">
           <div class="col-md-4 ml-auto order-2" data-aos="fade-up">
-            <h3 class="h3 mb-4">Skills</h3>
-            <ul class="list-unstyled">
-              <li class="mb-3">
-                <div class="d-flex mb-1">
-                  <strong>WordPress</strong>
-                  <span class="ml-auto">80%</span>
-                </div>
-                <div class="progress custom-progress">
-                  <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0"
-                    aria-valuemax="100"></div>
-                </div>
-              </li>
-              <li class="mb-3">
-                <div class="d-flex mb-1">
-                  <strong>Photoshop</strong>
-                  <span class="ml-auto">96%</span>
-                </div>
-                <div class="progress custom-progress">
-                  <div class="progress-bar" role="progressbar" style="width: 96%" aria-valuenow="96" aria-valuemin="0"
-                    aria-valuemax="100"></div>
-                </div>
-              </li>
-              <li class="mb-3">
-                <div class="d-flex mb-1">
-                  <strong>HTML5/CSS3</strong>
-                  <span class="ml-auto">99%</span>
-                </div>
-                <div class="progress custom-progress">
-                  <div class="progress-bar" role="progressbar" style="width: 99%" aria-valuenow="99" aria-valuemin="0"
-                    aria-valuemax="100"></div>
-                </div>
-              </li>
-              <li class="mb-3">
-                <div class="d-flex mb-1">
-                  <strong>Veu</strong>
-                  <span class="ml-auto">87%</span>
-                </div>
-                <div class="progress custom-progress">
-                  <div class="progress-bar" role="progressbar" style="width: 87%" aria-valuenow="87" aria-valuemin="0"
-                    aria-valuemax="100"></div>
-                </div>
-              </li>
-              <li class="mb-3">
-                <div class="d-flex mb-1">
-                  <strong>Angular</strong>
-                  <span class="ml-auto">85%</span>
-                </div>
-                <div class="progress custom-progress">
-                  <div class="progress-bar" role="progressbar" style="width: 85%" aria-valuenow="85" aria-valuemin="0"
-                    aria-valuemax="100"></div>
-                </div>
-              </li>
-              <li class="mb-3">
-                <div class="d-flex mb-1">
-                  <strong>React</strong>
-                  <span class="ml-auto">88%</span>
-                </div>
-                <div class="progress custom-progress">
-                  <div class="progress-bar" role="progressbar" style="width: 88%" aria-valuenow="88" aria-valuemin="0"
-                    aria-valuemax="100"></div>
-                </div>
-              </li>
-            </ul>
+            <h3 class="h3 mb-4">Education</h3>
+            <h5>University of Michigan</h5>
+            <h6>Masters of Science in Information</h6>
+            <p>User Centered Agile Developement / UX Research and Design</p>
+            <h5>Bowling Green State University</h5>
+            <h6>Bachelor of Arts</h6>
+            <p>Sociology / Art History</p>
+            <p><a href="#" class="readmore">Download my Resume</a></p>
           </div>
 
           <div class="col-md-7 mb-5 mb-md-0" data-aos="fade-up">
             <p><img src="img/person_1_sq.jpg" alt="Image" class="img-fluid"></p>
+            <h3 class="h3 mb-4">Personal</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor dignissimos delectus minima reprehenderit
               molestias illo dolorem et, odio!</p>
             <p>Fuga fugit distinctio delectus iure vitae consequatur excepturi, mollitia, consectetur molestias sapiente
@@ -172,7 +117,6 @@
               Vitae reiciendis quae ex.</p>
             <p>Optio consectetur culpa nemo, fugit pariatur veniam voluptate laudantium rerum fuga dolor in maiores ea
               nisi voluptatibus. Minus?</p>
-            <p><a href="#" class="readmore">Download my Resume</a></p>
           </div>
 
         </div>
