--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
   <nav class="navbar navbar-light custom-navbar">
     <div class="container">
-      <a class="navbar-brand" href="index.html">Victoria Cope</a>
+      <a class="navbar-brand" href="index.html"></a>
 
       <a href="#" class="burger" data-toggle="collapse" data-target="#main-navbar">
         <span></span>
@@ -79,6 +79,7 @@
           <div class="col-md-12 col-lg-6 mb-4 mb-lg-0" data-aos="fade-up">
             <h2>Hey, I'm Victoria Cope</h2>
             <p class="mb-0">Recent University of Michigan graduate / Incoming Product Manager Intern at SiriusXM + Pandora.</p>
+            <!-- <p class="mb-0">Check out some of my recent projects below.</p> -->
           </div>
           <div class="col-md-12 col-lg-6 text-left text-lg-right" data-aos="fade-up" data-aos-delay="100">
             <div id="filters" class="filters">
