--- a/contact.html
+++ b/contact.html
@@ -85,8 +85,7 @@
         <div class="row mb-5 align-items-end">
           <div class="col-md-6" data-aos="fade-up">
             <h2>Contact</h2>
-            <p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam necessitatibus incidunt ut
-              officiis explicabo inventore.
+            <p class="mb-0">If you saw something you liked, feel free to reach out and let me know. Thanks for stopping by!
             </p>
           </div>
 
@@ -138,16 +137,8 @@
           <div class="col-md-4 ml-auto order-2" data-aos="fade-up">
             <ul class="list-unstyled">
               <li class="mb-3">
-                <strong class="d-block mb-1">Address</strong>
-                <span>203 Fake St. Mountain View, San Francisco, California, USA</span>
-              </li>
-              <li class="mb-3">
-                <strong class="d-block mb-1">Phone</strong>
-                <span>+1 232 3235 324</span>
-              </li>
-              <li class="mb-3">
-                <strong class="d-block mb-1">Email</strong>
-                <span>youremail@domain.com</span>
+                <!-- <strong class="d-block mb-1">Email</strong>
+                <span>youremail@domain.com</span> -->
               </li>
             </ul>
           </div>
