--- a/sukiru.html
+++ b/sukiru.html
@@ -82,7 +82,7 @@
           <div class="col-md-6" data-aos="fade-up">
 
             <h2>Sukiru</h2>
-            <p>Inspired and influenced by the work of Japanese designer Ikko Tanaka, this project was a collaborative student work for the fictional Sukiru brand, a premium Japanese whiskey on the market. The selection of a whiskey brand for this design pitch was also influenced by the desire to bridge the history of the drink's Scottish roots to an international style.</p>
+            <p>Inspired and influenced by the work of Japanese designer Ikko Tanaka, this project was a collaborative student work for the fictional Sukiru brand, a premium Japanese whiskey entering the market. The selection of a whiskey brand for this design pitch was also influenced by the desire to bridge the history of the drink's Scottish roots to an international style.</p>
             <p>Relying heavily on cultural relationships for the brand identity inspiration drawn from Tanaka's process, we implemented a bold and expansive color palette with streamlined forms to create a unique, yet flexible system.</p>
           </div>
         </div>
@@ -193,15 +193,14 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-6">
+          <div class="social">
+            <a href="https://www.linkedin.com/in/victoria-cope"><span class="icofont-linkedin"></span></a>
+          </div>
           <p class="mb-1">&copy; Victoria Cope.</p>
           <div class="credits">
             Powered by <a href="https://bootstrapmade.com/">BootstrapMade</a>
           </div>
           </div>
-        </div>
-        </div>
-        <div class="col-sm-6 social text-md-right">
-          <a href="https://www.linkedin.com/in/victoria-cope"><span class="icofont-linkedin"></span></a>
         </div>
       </div>
     </div>
