--- a/about.html
+++ b/about.html
@@ -125,19 +125,19 @@
     </div>
 
   </main>
-  <footer class="footer mt-5 pt-5" role="contentinfo">
+
+  <footer class="footer" role="contentinfo">
     <div class="container">
       <div class="row">
         <div class="col-sm-6">
+          <div class="social">
+            <a href="https://www.linkedin.com/in/victoria-cope"><span class="icofont-linkedin"></span></a>
+          </div>
           <p class="mb-1">&copy; Victoria Cope.</p>
           <div class="credits">
             Powered by <a href="https://bootstrapmade.com/">BootstrapMade</a>
           </div>
           </div>
-        </div>
-        </div>
-        <div class="col-sm-6 social text-md-right">
-          <a href="https://www.linkedin.com/in/victoria-cope"><span class="icofont-linkedin"></span></a>
         </div>
       </div>
     </div>
