--- a/flo-redesign.html
+++ b/flo-redesign.html
@@ -140,57 +140,57 @@
             </div>
           </div>
 
-          <div class="row" data-aos="fade-up" data-aos-delay="200">
-            <div class="item web col-sm-6 col-md-4 col-lg-4 mb-4">
-              <a href="work-single.html" class="item-wrap fancybox">
+          <div id="portfolio-grid" class="row no-gutter" data-aos="fade-up" data-aos-delay="200">
+            <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
+              <a href="sukiru.html" class="item-wrap fancybox">
                 <div class="work-info">
-                  <h3>Boxed Water</h3>
-                  <span>Web</span>
+                  <h3>Sukiru</h3>
+                  <span>Branding</span>
                 </div>
-                <img class="img-fluid" src="img/img_1.jpg">
+                <img class="img-fluid" src="img/sukiru-poster.png">
               </a>
             </div>
-            <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
-              <a href="work-single.html" class="item-wrap fancybox">
+            <div class="item mobile col-sm-6 col-md-4 col-lg-4 mb-4">
+              <a href="flo-redesign.html" class="item-wrap fancybox">
                 <div class="work-info">
-                  <h3>Build Indoo</h3>
-                  <span>Photography</span>
+                  <h3>Flo Redesign</h3>
+                  <span>Mobile</span>
                 </div>
                 <img class="img-fluid" src="img/img_2.jpg">
               </a>
             </div>
-            <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
-              <a href="work-single.html" class="item-wrap fancybox">
+            <div class="item web col-sm-6 col-md-4 col-lg-4 mb-4">
+              <a href="collaboratory-online.html" class="item-wrap fancybox">
                 <div class="work-info">
-                  <h3>Cocooil</h3>
-                  <span>Branding</span>
+                  <h3>Collaboratory Online</h3>
+                  <span>Web</span>
                 </div>
                 <img class="img-fluid" src="img/img_3.jpg">
               </a>
             </div>
             <div class="item design col-sm-6 col-md-4 col-lg-4 mb-4">
-              <a href="work-single.html" class="item-wrap fancybox">
+              <a href="mooma-wayfinding.html" class="item-wrap fancybox">
                 <div class="work-info">
-                  <h3>Nike Shoe</h3>
+                  <h3>MoOMA Wayfinding System</h3>
                   <span>Design</span>
                 </div>
                 <img class="img-fluid" src="img/img_4.jpg">
               </a>
             </div>
-            <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
-              <a href="work-single.html" class="item-wrap fancybox">
+            <div class="item mobile col-sm-6 col-md-4 col-lg-4 mb-4">
+              <a href="geons-weather-app.html" class="item-wrap fancybox">
                 <div class="work-info">
-                  <h3>Kitchen Sink</h3>
-                  <span>Photography</span>
+                  <h3>Minimal Weather App</h3>
+                  <span>Mobile</span>
                 </div>
                 <img class="img-fluid" src="img/img_5.jpg">
               </a>
             </div>
             <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
-              <a href="work-single.html" class="item-wrap fancybox">
+              <a href="intestina.html" class="item-wrap fancybox">
                 <div class="work-info">
-                  <h3>Amazon</h3>
-                  <span>brandingn</span>
+                  <h3>Intestina</h3>
+                  <span>Branding</span>
                 </div>
                 <img class="img-fluid" src="img/img_6.jpg">
               </a>
@@ -199,39 +199,6 @@
         </div>
       </div>
 
-
-
-      <div class="site-section pb-0">
-        <div class="container">
-
-          <div class="owl-carousel testimonial-carousel">
-
-            <div class="testimonial-wrap">
-              <div class="testimonial">
-                <img src="img/person_1.jpg" alt="Image" class="img-fluid">
-                <blockquote>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam necessitatibus incidunt ut
-                    officiis explicabo inventore.</p>
-                </blockquote>
-                <p>&mdash; Jean Hicks</p>
-              </div>
-            </div>
-
-            <div class="testimonial-wrap">
-              <div class="testimonial">
-                <img src="img/person_2.jpg" alt="Image" class="img-fluid">
-                <blockquote>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam necessitatibus incidunt ut
-                    officiis explicabo inventore.</p>
-                </blockquote>
-                <p>&mdash; Chris Stanworth</p>
-              </div>
-            </div>
-
-          </div>
-
-        </div>
-      </div>
   </main>
   
   <footer class="footer" role="contentinfo">
