--- a/index.html
+++ b/index.html
@@ -75,10 +75,21 @@
 
     <div class="site-section site-portfolio">
       <div class="container">
+        <div>
+          <h1>Hey, my name is Victoria Cope</h1>
+        </div>
         <div class="row mb-5 align-items-center">
           <div class="col-md-12 col-lg-6 mb-4 mb-lg-0" data-aos="fade-up">
-            <h2>Hey, I'm Victoria Cope</h2>
+            <!-- <h1>Hey, my name is Victoria Cope</h1> -->
             <p class="mb-0">Recent University of Michigan graduate / Incoming Product Manager Intern at SiriusXM + Pandora.</p>
+            <!-- <p class="mb-0">Check out some of my recent projects below.</p> -->
+          </div>
+        </div>
+
+        <div class="row mb-5 align-items-center">
+          <div class="col-md-12 col-lg-6 mb-4 mb-lg-0" data-aos="fade-up">
+            <!-- <h1>Hey, my name is Victoria Cope</h1> -->
+            <p class="mb-0">Check out my recent works.</p>
             <!-- <p class="mb-0">Check out some of my recent projects below.</p> -->
           </div>
           <div class="col-md-12 col-lg-6 text-left text-lg-right" data-aos="fade-up" data-aos-delay="100">
@@ -91,6 +102,7 @@
             </div>
           </div>
         </div>
+
         <div id="portfolio-grid" class="row no-gutter" data-aos="fade-up" data-aos-delay="200">
           <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="sukiru.html" class="item-wrap fancybox">
