--- a/intestina.html
+++ b/intestina.html
@@ -107,7 +107,7 @@
             <div class="col-md-3 ml-auto" data-aos="fade-up" data-aos-delay="100">
               <div class="sticky-content">
                 <h3 class="h3">Intestina</h3>
-                <p class="mb-4"><span class="text-muted">Design</span></p>
+                <p class="mb-4"><span class="text-muted">Branding</span></p>
 
                 <div class="mb-5">
                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores illo, id recusandae molestias
