contributions and tools + tech

--- a/flo-redesign.html
+++ b/flo-redesign.html
@@ -89,8 +89,9 @@
           <div class="col-md-6" data-aos="fade-up">
 
             <h2>Flo Redesign</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam necessitatibus incidunt ut officiis
-              explicabo inventore.</p>
+            <p>The key decision behind this redesign is inspired by using an informational and data-driven approach to menstrual cycles and reproductive health, while avoiding any direct references to overt femininity or prescribed expectations of woman­hood through visual representations in the existing design.</p>
+            <p>In this approach, the goal is to create a space that is not overtly feminine to provide a functional tool for individuals who do not identify with the direct projection of feminine energy on their experiences with their bodies. Moreover, for individ­uals who are simply looking for a cooler-toned, confident and less gaudy fit within their personal preferences and lifestyles.</p>
+            <p>The color palette was selected to imbue a sense of calm, energy, and control when dealing with this subject matter through cooler hues. This work is also an exploration of color relationships via Plutchik's color theory and wheel of emotions.</p>
 
           </div>
 
@@ -110,21 +111,14 @@
                 <p class="mb-4"><span class="text-muted">Design</span></p>
 
                 <div class="mb-5">
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores illo, id recusandae molestias
-                    illum unde pariatur, enim tempora.</p>
-
+                  <p>Key screens throughout the app were selected for redesign based on UI inconsistencies and to simplify based on the new identity. Screens included onboarding, main landing, nav bar, calendar view, insight view, learning, and search functions.</p>
                 </div>
 
-
-                <h4 class="h4 mb-3">What I did</h4>
+                <h4 class="h4 mb-3">Tools and Tech</h4>
                 <ul class="list-unstyled list-line mb-5">
-                  <li>Design</li>
-                  <li>HTML5/CSS3</li>
-                  <li>CMS</li>
-                  <li>Logo</li>
+                  <li>Illustrator</li>
+                  <li>Photoshop</li>
                 </ul>
-
-                <p><a href="#" class="readmore">Visit Website</a></p>
               </div>
             </div>
           </div>
