--- a/collaboratory-online.html
+++ b/collaboratory-online.html
@@ -45,7 +45,7 @@
         <div class="col-md-2">
           <ul class="custom-menu">
             <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About Me</a></li>
+            <li><a href="about.html">About</a></li>
             <li><a href="contact.html">Contact</a></li>
           </ul>
         </div>
@@ -107,24 +107,32 @@
             <div class="col-md-3 ml-auto" data-aos="fade-up" data-aos-delay="100">
               <div class="sticky-content">
                 <h3 class="h3">Collaboratory Online</h3>
-                <p class="mb-4"><span class="text-muted">Design</span></p>
+                <p class="mb-4"><span class="text-muted">Web</span></p>
 
                 <div class="mb-5">
                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores illo, id recusandae molestias
                     illum unde pariatur, enim tempora.</p>
-
                 </div>
 
 
-                <h4 class="h4 mb-3">What I did</h4>
+                <h4 class="h4 mb-3">Contributions</h4>
                 <ul class="list-unstyled list-line mb-5">
-                  <li>Design</li>
-                  <li>HTML5/CSS3</li>
-                  <li>CMS</li>
-                  <li>Logo</li>
+                  <li>Product Manager</li>
+                  <li>Developer</li>
+                  <li>UX Researcher + Designer</li>
                 </ul>
 
-                <p><a href="#" class="readmore">Visit Website</a></p>
+                <h4 class="h4 mb-3">Tools and Tech</h4>
+                <ul class="list-unstyled list-line mb-5">
+                  <li>Figma</li>
+                  <li>Django</li>
+                  <li>MariaDB</li>
+                  <li>React</li>
+                  <li>Semantic UI</li>
+                  <li>Heroku</li>
+                </ul>
+
+                <p><a href="#" class="readmore">View Demo Video</a></p>
               </div>
             </div>
           </div>
