--- a/sukiru.html
+++ b/sukiru.html
@@ -102,7 +102,7 @@
                 <p class="mb-4"><span class="text-muted">Branding</span></p>
 
                 <div class="mb-5">
-                  <p>Designed web and mobile UI for brand, and print collaterals for labels, packaging, posters, magazines and billboards.</p>
+                  <p>We designed web and mobile UI for the brand, and print collaterals for labels, packaging, posters, magazines and billboards.</p>
                 </div>
 
 
@@ -111,6 +111,12 @@
                   <li>Logomark</li>
                   <li>Print Designs</li>
                   <li>Brand Identity and Style</li>
+                </ul>
+
+                <h4 class="h4 mb-3">Tools and Tech</h4>
+                <ul class="list-unstyled list-line mb-5">
+                  <li>Illustrator</li>
+                  <li>Photoshop</li>
                 </ul>
 
               </div>
