add text to pages

--- a/about.html
+++ b/about.html
@@ -109,6 +109,11 @@
           <div class="col-md-7 mb-5 mb-md-0" data-aos="fade-up">
             <p><img src="img/person_1_sq.jpg" alt="Image" class="img-fluid"></p>
             <h3 class="h3 mb-4">Personal</h3>
+            <ul>
+              <li>taught coding/sociology</li>
+              <li>Salomé Design House</li>
+              <li>played soccer in my undergrad</li>
+            </ul>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor dignissimos delectus minima reprehenderit
               molestias illo dolorem et, odio!</p>
             <p>Fuga fugit distinctio delectus iure vitae consequatur excepturi, mollitia, consectetur molestias sapiente
