--- a/collaboratory-online.html
+++ b/collaboratory-online.html
@@ -89,9 +89,9 @@
           <div class="col-md-6" data-aos="fade-up">
 
             <h2>Collaboratory Online</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam necessitatibus incidunt ut officiis
-              explicabo inventore.</p>
-
+            <p>Collaboratory Online is a web application ideated, designed, and executed for Southwest Floida Community Foundation. Collaboratory is a space within SWFCF that brings in nonprofit organizers and community changemakers together for to enable their ability to connect with others working in similar community spaces and organize rresources for overall communiity betterment.</p>
+            <p>Due to COVID-19 and the loss of in-person interactions through Collaboratory, it became apparent that an ambidextrous space was needed to create a more comprehensive sphere of connection between nonprofits across the Southwest Florida regions. From a user perspective, non-profit organizers, volunteers, and coordinators need an online support system to alleviate barriers to connecting with other community changemakers so they can focus on their own goals and community betterment.</p>
+            <p>Utilizing Agile software development intertwined with UX principles, in each sprint our group conducted usability research and/or needfinding practices to determine the efficacy of our application and make adjustments in the roadmap as needed. Our team followed a SCRUM/Agile makeup using the prescribed roles per the methodology, however product development was completed by all team members.</p>
           </div>
 
 
@@ -110,8 +110,7 @@
                 <p class="mb-4"><span class="text-muted">Web</span></p>
 
                 <div class="mb-5">
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores illo, id recusandae molestias
-                    illum unde pariatur, enim tempora.</p>
+                  <p>Collaboratory Online is a space that allows others to post and navigate content, view and postcommunity events, as well as search a directory of other organizations and members based on regions and causes.</p>
                 </div>
 
 
@@ -128,7 +127,6 @@
                   <li>Django</li>
                   <li>MariaDB</li>
                   <li>React</li>
-                  <li>Semantic UI</li>
                   <li>Heroku</li>
                 </ul>
 
