--- a/flo-redesign.html
+++ b/flo-redesign.html
@@ -90,7 +90,7 @@
 
             <h2>Flo Redesign</h2>
             <p>The key decision behind this redesign is inspired by using an informational and data-driven approach to menstrual cycles and reproductive health, while avoiding any direct references to overt femininity or prescribed expectations of woman­hood through visual representations in the existing design.</p>
-            <p>In this approach, the goal is to create a space that is not overtly feminine to provide a functional tool for individuals who do not identify with the direct projection of feminine energy on their experiences with their bodies. Moreover, for individ­uals who are simply looking for a cooler-toned, confident and less gaudy fit within their personal preferences and lifestyles.</p>
+            <p>In this approach, the goal is to create a space that is not overtly feminine to provide a functional tool for individuals who do not identify with the direct projection of feminine energy on their experiences with their bodies. Moreover, the erdesign is for individ­uals who are simply looking for a cooler-toned and confident energy within their personal preferences and lifestyles.</p>
             <p>The color palette was selected to imbue a sense of calm, energy, and control when dealing with this subject matter through cooler hues. This work is also an exploration of color relationships via Plutchik's color theory and wheel of emotions.</p>
 
           </div>
