--- a/geons-weather-app.html
+++ b/geons-weather-app.html
@@ -89,8 +89,8 @@
           <div class="col-md-6" data-aos="fade-up">
 
             <h2>Minimal Weather App</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam necessitatibus incidunt ut officiis
-              explicabo inventore.</p>
+            <p>The Minimal Weather App project explores the use of simplfied yet expressive shapes and information to inspire a functional wethaer application focused on aesthetic design. Weather applications can range from overbearingly complex in information visualization, to simplified views that place visual design as a lower priority.</p>
+            <p>This fun, personal project was another way to explore Gestalt principles in a tangible way and focus on key weather states to convey information visually with only vital supporting data. In this project, the design choices are inspired by a physical place and climate to improve referential skills and relationships in design choices.</p>
 
           </div>
 
@@ -110,21 +110,16 @@
                 <p class="mb-4"><span class="text-muted">Design</span></p>
 
                 <div class="mb-5">
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores illo, id recusandae molestias
-                    illum unde pariatur, enim tempora.</p>
+                  <p>The chosen color palette and certain weather states are inspired by the caribbean island St. Lucia, home to a warm, tropical climate tempered by trade winds throughout most of the year.</p>
 
                 </div>
 
 
-                <h4 class="h4 mb-3">What I did</h4>
+                <h4 class="h4 mb-3">Tools and Tech</h4>
                 <ul class="list-unstyled list-line mb-5">
-                  <li>Design</li>
-                  <li>HTML5/CSS3</li>
-                  <li>CMS</li>
-                  <li>Logo</li>
+                  <li>Illustrator</li>
+                  <li>Photoshop</li>
                 </ul>
-
-                <p><a href="#" class="readmore">Visit Website</a></p>
               </div>
             </div>
           </div>
