--- a/intestina.html
+++ b/intestina.html
@@ -89,9 +89,8 @@
           <div class="col-md-6" data-aos="fade-up">
 
             <h2>Intestina</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam necessitatibus incidunt ut officiis
-              explicabo inventore.</p>
-
+            <p>Intestina is a product that services users who are managing symptoms attrributed to IBS. This tool allows users to track their FODMAP intakes per recipe and individual food item, log their symptoms in relation to dietary adjustments and tracking, and finally connect their data to their healthcare provider.</p>
+            <p>The branding project concept is inspired by keeping users on track to a healthy lifestyle, and minimizing the disruption to their lives as a result of IBS. By giving users an empowering tool to manage their diets, we arer in turn giving them the power to choose freedom in their lifestyles, without the fear of being ruled by their symptoms.</p>
           </div>
 
 
@@ -110,21 +109,17 @@
                 <p class="mb-4"><span class="text-muted">Branding</span></p>
 
                 <div class="mb-5">
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores illo, id recusandae molestias
-                    illum unde pariatur, enim tempora.</p>
+                  <p>Created a branding and identity guide, and screens for a prototype based on existing wireframes. Project included logo design and variations, typographic specimens, asset selection, collaterals and eventual prototype.</p>
 
                 </div>
 
 
-                <h4 class="h4 mb-3">What I did</h4>
+                <h4 class="h4 mb-3">Tools and Tech</h4>
                 <ul class="list-unstyled list-line mb-5">
-                  <li>Design</li>
-                  <li>HTML5/CSS3</li>
-                  <li>CMS</li>
-                  <li>Logo</li>
+                  <li>Illustrator</li>
+                  <li>Photoshop</li>
                 </ul>
 
-                <p><a href="#" class="readmore">Visit Website</a></p>
               </div>
             </div>
           </div>
