--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
   <link href="img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Michroma:400,700|Poppins:300,200&display=swap"
+  <link href="https://fonts.googleapis.com/css?family=Barlow:600|Poppins:300,200&display=swap"
     rel="stylesheet">
 
   <!-- Bootstrap CSS File -->
@@ -26,13 +26,6 @@
 
   <!-- Template Main CSS File -->
   <link href="css/style.css" rel="stylesheet">
-
-  <!-- =======================================================
-    Template Name: MyPortfolio
-    Template URL: https://bootstrapmade.com/myportfolio-bootstrap-portfolio-website-template/
-    Author: BootstrapMade.com
-    Author URL: https://bootstrapmade.com/
-  ======================================================= -->
 </head>
 
 <body>
@@ -87,7 +80,7 @@
         <div class="row mb-5 align-items-end">
           <div class="col-md-6" data-aos="fade-up">
 
-            <h2>About</h2>
+            <h2>Hello</h2>
             <p class="mb-0">Make this a very simple introduction to who I am. Get to know more about my education, and extracurriculars. </p>
           </div>
 
