--- a/flo-redesign.html
+++ b/flo-redesign.html
@@ -13,7 +13,7 @@
   <link href="img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Michroma:400,700|Poppins:300,200&display=swap"
+  <link href="https://fonts.googleapis.com/css?family=Barlow:600|Poppins:300,200&display=swap"
     rel="stylesheet">
 
   <!-- Bootstrap CSS File -->
