--- a/mooma-wayfinding.html
+++ b/mooma-wayfinding.html
@@ -13,7 +13,7 @@
   <link href="img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Michroma:400,700|Poppins:300,200&display=swap"
+  <link href="https://fonts.googleapis.com/css?family=Barlow:600|Poppins:300,200&display=swap"
     rel="stylesheet">
 
   <!-- Bootstrap CSS File -->
@@ -28,12 +28,6 @@
   <!-- Template Main CSS File -->
   <link href="css/style.css" rel="stylesheet">
 
-  <!-- =======================================================
-    Template Name: MyPortfolio
-    Template URL: https://bootstrapmade.com/myportfolio-bootstrap-portfolio-website-template/
-    Author: BootstrapMade.com
-    Author URL: https://bootstrapmade.com/
-  ======================================================= -->
 </head>
 
 <body>
