--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta content="" name="description">
 
   <!-- Favicons -->
-  <link href="img/favicon.png" rel="icon">
+  <link href="img/favicon.ico" rel="icon">
   <link href="img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
@@ -60,12 +60,9 @@
 
     <div class="site-section site-portfolio">
       <div class="container">
-        <div>
-          <h1>Hey, my name is Victoria Cope</h1>
-        </div>
-        <div class="row mb-5 align-items-center">
+        <div class="row mb-5 align-items-center" id="parallax">
           <div class="col-md-12 col-lg-6 mb-4 mb-lg-0" data-aos="fade-up">
-            <!-- <h1>Hey, my name is Victoria Cope</h1> -->
+            <h1>Hey, my name is Victoria Cope</h1>
             <p class="mb-0">Recent University of Michigan graduate / Incoming Product Manager Intern at SiriusXM + Pandora.</p>
             <!-- <p class="mb-0">Check out some of my recent projects below.</p> -->
           </div>
@@ -74,7 +71,7 @@
         <div class="row mb-5 align-items-center">
           <div class="col-md-12 col-lg-6 mb-4 mb-lg-0" data-aos="fade-up">
             <!-- <h1>Hey, my name is Victoria Cope</h1> -->
-            <p class="mb-0">Check out my recent works.</p>
+            <h3 class="mb-0">Check out some of my recent works.</h3>
             <!-- <p class="mb-0">Check out some of my recent projects below.</p> -->
           </div>
           <div class="col-md-12 col-lg-6 text-left text-lg-right" data-aos="fade-up" data-aos-delay="100">
