--- a/sukiru.html
+++ b/sukiru.html
@@ -9,7 +9,7 @@
   <meta content="" name="description">
 
   <!-- Favicons -->
-  <link href="img/favicon.png" rel="icon">
+  <link href="img/favicon.ico" rel="icon">
   <link href="img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
@@ -42,22 +42,7 @@
             <li><a href="contact.html">Contact</a></li>
           </ul>
         </div>
-        <div class="col-md-6 d-none d-md-block  mr-auto">
-          <div class="tweet d-flex">
-            <span class="icofont-twitter text-white mt-2 mr-3"></span>
-            <div>
-              <p><em>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam necessitatibus incidunt ut
-                  officiis explicabo inventore. <br> <a href="#">t.co/v82jsk</a></em></p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4 d-none d-md-block">
-          <h3>Hire Me</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam necessitatibus incidunt ut officiis
-            explicabo inventore. <br> <a href="#">myemail@gmail.com</a></p>
-        </div>
       </div>
-
     </div>
   </div>
 
@@ -92,9 +77,14 @@
         <div class="container">
           <div class="row align-items-stretch">
             <div class="col-md-8" data-aos="fade-up">
-              <img src="img/sukiru-poster.png" alt="Image" class="img-fluid">
-              <img src="img/sukiru-poster.png" alt="Image" class="img-fluid">
-              <img src="img/sukiru-poster.png" alt="Image" class="img-fluid">
+              <img src="img/sukiru-poster.png" alt="poster" class="img-fluid">
+              <img src="img/sukiru-mag-mockup.png" alt="magazine mockup" class="img-fluid">
+              <img src="img/sukiru-billboard-mockup.png" alt="billboards mockup" class="img-fluid">
+              <img src="img/sukiru-poster-ori.png" alt="billboards mockup" class="img-fluid">
+              <img src="img/sukiru-mag.png" alt="magazine" class="img-fluid">
+              <img src="img/sukiru-billboard.png" alt="billboards" class="img-fluid">
+              <!-- <img src="img/sukiru-bottle.jpg" alt="bottle" class="img-fluid"> -->
+              <img src="img/sukiru-logo.png" alt="logo" class="img-fluid">
             </div>
             <div class="col-md-3 ml-auto" data-aos="fade-up" data-aos-delay="100">
               <div class="sticky-content">
