--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
   <meta content="" name="description">
 
   <!-- Favicons -->
-  <link href="img/favicon.png" rel="icon">
+  <link href="img/favicon.ico" rel="icon">
   <link href="img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
@@ -41,20 +41,7 @@
             <li><a href="contact.html">Contact</a></li>
           </ul>
         </div>
-        <div class="col-md-6 d-none d-md-block  mr-auto">
-          <div class="tweet d-flex">
-            <span class="icofont-twitter text-white mt-2 mr-3"></span>
-            <div>
-              <p><em>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam necessitatibus incidunt ut
-                  officiis explicabo inventore. <br> <a href="#">t.co/v82jsk</a></em></p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4 d-none d-md-block">
-          <h3>Hire Me</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam necessitatibus incidunt ut officiis
-            explicabo inventore. <br> <a href="#">myemail@gmail.com</a></p>
-        </div>
+
       </div>
 
     </div>
@@ -81,9 +68,8 @@
           <div class="col-md-6" data-aos="fade-up">
 
             <h2>Hello</h2>
-            <p class="mb-0">Make this a very simple introduction to who I am. Get to know more about my education, and extracurriculars. </p>
+            <p class="mb-0">I'm glad you could make it here, keep scrolling for more information about my education, personal interests and hobbies.</p>
           </div>
-
         </div>
 
 
@@ -96,11 +82,11 @@
             <h5>Bowling Green State University</h5>
             <h6>Bachelor of Arts</h6>
             <p>Sociology / Art History</p>
-            <p><a href="#" class="readmore">Download my Resume</a></p>
+            <!-- <p><a href="#" class="readmore">Download my Resume</a></p> -->
           </div>
 
           <div class="col-md-7 mb-5 mb-md-0" data-aos="fade-up">
-            <p><img src="img/person_1_sq.jpg" alt="Image" class="img-fluid"></p>
+            <p><img src="img/profile.jpeg" alt="Victoria" class="img-fluid"></p>
             <h3 class="h3 mb-4">Personal</h3>
             <ul>
               <li>taught coding/sociology</li>
