about, intestina, page grids left

--- a/about.html
+++ b/about.html
@@ -68,7 +68,7 @@
           <div class="col-md-6" data-aos="fade-up">
 
             <h2>Hello</h2>
-            <p class="mb-0">I'm glad you could make it here, keep scrolling for more information about my education, personal interests and hobbies.</p>
+            <p class="mb-0">I'm so glad you could make it, keep scrolling for more information about my education, personal interests and hobbies.</p>
           </div>
         </div>
 
