--- a/collaboratory-online.html
+++ b/collaboratory-online.html
@@ -28,12 +28,6 @@
   <!-- Template Main CSS File -->
   <link href="css/style.css" rel="stylesheet">
 
-  <!-- =======================================================
-    Template Name: MyPortfolio
-    Template URL: https://bootstrapmade.com/myportfolio-bootstrap-portfolio-website-template/
-    Author: BootstrapMade.com
-    Author URL: https://bootstrapmade.com/
-  ======================================================= -->
 </head>
 
 <body>
@@ -48,20 +42,6 @@
             <li><a href="about.html">About</a></li>
             <li><a href="contact.html">Contact</a></li>
           </ul>
-        </div>
-        <div class="col-md-6 d-none d-md-block  mr-auto">
-          <div class="tweet d-flex">
-            <span class="icofont-twitter text-white mt-2 mr-3"></span>
-            <div>
-              <p><em>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam necessitatibus incidunt ut
-                  officiis explicabo inventore. <br> <a href="#">t.co/v82jsk</a></em></p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4 d-none d-md-block">
-          <h3>Hire Me</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam necessitatibus incidunt ut officiis
-            explicabo inventore. <br> <a href="#">myemail@gmail.com</a></p>
         </div>
       </div>
 
@@ -102,7 +82,7 @@
         <div class="container">
           <div class="row align-items-stretch">
             <div class="col-md-8" data-aos="fade-up">
-              <img src="img/img_1_big.jpg" alt="Image" class="img-fluid">
+              <img src="img/collaboratory-cover.png" alt="Image" class="img-fluid">
             </div>
             <div class="col-md-3 ml-auto" data-aos="fade-up" data-aos-delay="100">
               <div class="sticky-content">
@@ -110,7 +90,7 @@
                 <p class="mb-4"><span class="text-muted">Web</span></p>
 
                 <div class="mb-5">
-                  <p>Collaboratory Online is a space that allows others to post and navigate content, view and postcommunity events, as well as search a directory of other organizations and members based on regions and causes.</p>
+                  <p>Collaboratory Online is a space that allows others to post and navigate content, view and post community events, as well as search a directory of other organizations and members based on regions and causes.</p>
                 </div>
 
 
