--- a/flo-redesign.html
+++ b/flo-redesign.html
@@ -27,13 +27,6 @@
 
   <!-- Template Main CSS File -->
   <link href="css/style.css" rel="stylesheet">
-
-  <!-- =======================================================
-    Template Name: MyPortfolio
-    Template URL: https://bootstrapmade.com/myportfolio-bootstrap-portfolio-website-template/
-    Author: BootstrapMade.com
-    Author URL: https://bootstrapmade.com/
-  ======================================================= -->
 </head>
 
 <body>
@@ -48,20 +41,6 @@
             <li><a href="about.html">About</a></li>
             <li><a href="contact.html">Contact</a></li>
           </ul>
-        </div>
-        <div class="col-md-6 d-none d-md-block  mr-auto">
-          <div class="tweet d-flex">
-            <span class="icofont-twitter text-white mt-2 mr-3"></span>
-            <div>
-              <p><em>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam necessitatibus incidunt ut
-                  officiis explicabo inventore. <br> <a href="#">t.co/v82jsk</a></em></p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4 d-none d-md-block">
-          <h3>Hire Me</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam necessitatibus incidunt ut officiis
-            explicabo inventore. <br> <a href="#">myemail@gmail.com</a></p>
         </div>
       </div>
 
@@ -103,7 +82,13 @@
         <div class="container">
           <div class="row align-items-stretch">
             <div class="col-md-8" data-aos="fade-up">
-              <img src="img/img_1_big.jpg" alt="Image" class="img-fluid">
+              <img src="img/flo-onboarding.png" alt="Image" class="img-fluid">
+              <img src="img/flo-home-cal.png" alt="Image" class="img-fluid">
+              <img src="img/flo-story-insight.png" alt="Image" class="img-fluid">
+              <img src="img/flo-learning-search.png" alt="Image" class="img-fluid">
+              <img src="img/flo-personas.png" alt="Image" class="img-fluid">
+              <img src="img/flo-sketch-1.png" alt="Image" class="img-fluid">
+              <img src="img/flo-sketch-2.png" alt="Image" class="img-fluid">
             </div>
             <div class="col-md-3 ml-auto" data-aos="fade-up" data-aos-delay="100">
               <div class="sticky-content">
