--- a/geons-weather-app.html
+++ b/geons-weather-app.html
@@ -28,12 +28,6 @@
   <!-- Template Main CSS File -->
   <link href="css/style.css" rel="stylesheet">
 
-  <!-- =======================================================
-    Template Name: MyPortfolio
-    Template URL: https://bootstrapmade.com/myportfolio-bootstrap-portfolio-website-template/
-    Author: BootstrapMade.com
-    Author URL: https://bootstrapmade.com/
-  ======================================================= -->
 </head>
 
 <body>
@@ -48,20 +42,6 @@
             <li><a href="about.html">About</a></li>
             <li><a href="contact.html">Contact</a></li>
           </ul>
-        </div>
-        <div class="col-md-6 d-none d-md-block  mr-auto">
-          <div class="tweet d-flex">
-            <span class="icofont-twitter text-white mt-2 mr-3"></span>
-            <div>
-              <p><em>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam necessitatibus incidunt ut
-                  officiis explicabo inventore. <br> <a href="#">t.co/v82jsk</a></em></p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4 d-none d-md-block">
-          <h3>Hire Me</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam necessitatibus incidunt ut officiis
-            explicabo inventore. <br> <a href="#">myemail@gmail.com</a></p>
         </div>
       </div>
 
@@ -102,12 +82,15 @@
         <div class="container">
           <div class="row align-items-stretch">
             <div class="col-md-8" data-aos="fade-up">
-              <img src="img/img_1_big.jpg" alt="Image" class="img-fluid">
+              <img src="img/minimal-cover.png" alt="Image" class="img-fluid">
+              <img src="img/minimal-screens-2-wide.png" alt="Image" class="img-fluid">
+              <img src="img/minimal-2-wide-additional.png" alt="Image" class="img-fluid">
+              <img src="img/minimal-2-final.png" alt="Image" class="img-fluid">
             </div>
             <div class="col-md-3 ml-auto" data-aos="fade-up" data-aos-delay="100">
               <div class="sticky-content">
                 <h3 class="h3">Minimal Weather App</h3>
-                <p class="mb-4"><span class="text-muted">Design</span></p>
+                <p class="mb-4"><span class="text-muted">Mobile</span></p>
 
                 <div class="mb-5">
                   <p>The chosen color palette and certain weather states are inspired by the caribbean island St. Lucia, home to a warm, tropical climate tempered by trade winds throughout most of the year.</p>
