--- a/index.html
+++ b/index.html
@@ -58,10 +58,13 @@
 
   <main id="main">
 
+
+    <!-- for 3 row grid, use this class specifically "... col-sm-6 col-md-4 col-lg-4 mb-4" -->
+
     <div class="site-section site-portfolio">
       <div class="container">
-        <div class="row mb-5 align-items-center" id="parallax">
-          <div class="col-md-12 col-lg-6 mb-4 mb-lg-0" data-aos="fade-up">
+        <div class="row mb-5 align-items-center">
+          <div class="col-md-12 col-lg-6 mb-4 mb-lg-0" data-aos="fade-up" id='hero'>
             <h1>Hey, my name is Victoria Cope</h1>
             <p class="mb-0">Recent University of Michigan graduate / Incoming Product Manager Intern at SiriusXM + Pandora.</p>
             <!-- <p class="mb-0">Check out some of my recent projects below.</p> -->
@@ -71,7 +74,7 @@
         <div class="row mb-5 align-items-center">
           <div class="col-md-12 col-lg-6 mb-4 mb-lg-0" data-aos="fade-up">
             <!-- <h1>Hey, my name is Victoria Cope</h1> -->
-            <h3 class="mb-0">Check out some of my recent works.</h3>
+            <h4 class="mb-0">Recent Works</h4>
             <!-- <p class="mb-0">Check out some of my recent projects below.</p> -->
           </div>
           <div class="col-md-12 col-lg-6 text-left text-lg-right" data-aos="fade-up" data-aos-delay="100">
@@ -80,13 +83,13 @@
               <a href="#" data-filter=".web">Web</a>
               <a href="#" data-filter=".mobile">Mobile</a>
               <a href="#" data-filter=".branding">Branding</a>
-              <a href="#" data-filter=".design">Design</a>
+              <!-- <a href="#" data-filter=".design">Design</a> -->
             </div>
           </div>
         </div>
 
         <div id="portfolio-grid" class="row no-gutter" data-aos="fade-up" data-aos-delay="200">
-          <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
+          <div class="item branding col-md-12 col-lg-6 mb-4 mb-lg-0">
             <a href="sukiru.html" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>Sukiru</h3>
@@ -95,25 +98,25 @@
               <img class="img-fluid" src="img/sukiru-poster.png">
             </a>
           </div>
-          <div class="item mobile col-sm-6 col-md-4 col-lg-4 mb-4">
+          <div class="item mobile col-md-12 col-lg-6 mb-4 mb-lg-0">
             <a href="flo-redesign.html" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>Flo Redesign</h3>
                 <span>Mobile</span>
               </div>
-              <img class="img-fluid" src="img/img_2.jpg">
+              <img class="img-fluid" src="img/flo-onboarding.png">
             </a>
           </div>
-          <div class="item web col-sm-6 col-md-4 col-lg-4 mb-4">
+          <div class="item web col-md-12 col-lg-6 mb-4 mb-lg-0">
             <a href="collaboratory-online.html" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>Collaboratory Online</h3>
                 <span>Web</span>
               </div>
-              <img class="img-fluid" src="img/img_3.jpg">
+              <img class="img-fluid" src="img/collaboratory-cover.png">
             </a>
           </div>
-          <div class="item design col-sm-6 col-md-4 col-lg-4 mb-4">
+          <!-- <div class="item design col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="mooma-wayfinding.html" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>MoOMA Wayfinding System</h3>
@@ -121,23 +124,23 @@
               </div>
               <img class="img-fluid" src="img/img_4.jpg">
             </a>
-          </div>
-          <div class="item mobile col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="geons-weather-app.html" class="item-wrap fancybox">
-              <div class="work-info">
-                <h3>Minimal Weather App</h3>
-                <span>Mobile</span>
-              </div>
-              <img class="img-fluid" src="img/img_5.jpg">
-            </a>
-          </div>
-          <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
+          </div> -->
+          <div class="item branding col-md-12 col-lg-6 mb-4 mb-lg-0">
             <a href="intestina.html" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>Intestina</h3>
                 <span>Branding</span>
               </div>
               <img class="img-fluid" src="img/img_6.jpg">
+            </a>
+          </div>
+          <div class="item mobile col-md-12 col-lg-6 mb-4 mb-lg-0">
+            <a href="geons-weather-app.html" class="item-wrap fancybox">
+              <div class="work-info">
+                <h3>Minimal Weather App</h3>
+                <span>Mobile</span>
+              </div>
+              <img class="img-fluid" src="img/minimal-cover.png">
             </a>
           </div>
         </div>
