--- a/contact.html
+++ b/contact.html
@@ -26,6 +26,13 @@
 
   <!-- Template Main CSS File -->
   <link href="css/style.css" rel="stylesheet">
+
+  <!-- testing sending form -->
+  <style>
+		.hide-robot{
+			display:none;
+		}
+		</style>
 </head>
 
 <body>
@@ -73,25 +80,29 @@
           <div class="col-md-6 mb-5 mb-md-0" data-aos="fade-up">
             <form action="forms/contact.php" method="post" role="form" class="php-email-form">
               <div class="row">
+
+                <!-- honeypot -->
+                <input name="firstname" type="text" id="firstname" class="hide-robot">
+
                 <div class="col-md-6 form-group">
                   <label for="name">Name</label>
                   <input type="text" name="name" class="form-control" id="name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
-                  <div class="validate"></div>
+                  <!-- <div class="validate"></div> -->
                 </div>
                 <div class="col-md-6 form-group">
                   <label for="name">Email</label>
                   <input type="email" class="form-control" name="email" id="email" data-rule="email" data-msg="Please enter a valid email" />
-                  <div class="validate"></div>
+                  <!-- <div class="validate"></div> -->
                 </div>
                 <div class="col-md-12 form-group">
                   <label for="name">Subject</label>
-                  <input type="text" class="form-control" name="subject" id="subject" data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject" />
-                  <div class="validate"></div>
+                  <input type="text" class="form-control" name="subjectsender" id="subjectsender" data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject" />
+                  <!-- <div class="validate"></div> -->
                 </div>
                 <div class="col-md-12 form-group">
                   <label for="name">Message</label>
                   <textarea class="form-control" name="message" cols="30" rows="10" data-rule="required" data-msg="Please write something for us"></textarea>
-                  <div class="validate"></div>
+                  <!-- <div class="validate"></div> -->
                 </div>
 
 
@@ -102,7 +113,8 @@
                 </div>
 
                 <div class="col-md-6 form-group">
-                  <input type="submit" class="readmore d-block w-100" value="Send Message">
+                  <input type="submit" class="readmore d-block w-100">
+                  <!-- <input type="submit" class="readmore d-block w-100" value="Send Message"> -->
                 </div>
               </div>
 
