--- a/contact.html
+++ b/contact.html
@@ -87,22 +87,22 @@
                 <div class="col-md-6 form-group">
                   <label for="name">Name</label>
                   <input type="text" name="name" class="form-control" id="name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
-                  <!-- <div class="validate"></div> -->
+                  <div class="validate"></div>
                 </div>
                 <div class="col-md-6 form-group">
                   <label for="name">Email</label>
                   <input type="email" class="form-control" name="email" id="email" data-rule="email" data-msg="Please enter a valid email" />
-                  <!-- <div class="validate"></div> -->
+                  <div class="validate"></div>
                 </div>
                 <div class="col-md-12 form-group">
                   <label for="name">Subject</label>
                   <input type="text" class="form-control" name="subjectsender" id="subjectsender" data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject" />
-                  <!-- <div class="validate"></div> -->
+                  <div class="validate"></div>
                 </div>
                 <div class="col-md-12 form-group">
                   <label for="name">Message</label>
                   <textarea class="form-control" name="message" cols="30" rows="10" data-rule="required" data-msg="Please write something for us"></textarea>
-                  <!-- <div class="validate"></div> -->
+                  <div class="validate"></div>
                 </div>
 
 
