add confirmation message form

--- a/contact.html
+++ b/contact.html
@@ -109,7 +109,7 @@
                 </div> -->
 
                 <div class="col-md-6 form-group">
-                  <input type="submit" class="readmore d-block w-100">
+                  <input onclick= "this.value='Message Sent!'" type="submit" class="readmore d-block w-100" id="submitted" value="Send Message">
                   <!-- <input type="submit" class="readmore d-block w-100" value="Send Message"> -->
                 </div>
               </div>
