--- a/about.html
+++ b/about.html
@@ -68,7 +68,7 @@
           <div class="col-md-6" data-aos="fade-up">
 
             <h2>Hello</h2>
-            <p class="mb-0">I'm so glad you could make it, keep scrolling for more information about my education, personal interests and hobbies.</p>
+            <p class="mb-0">I'm glad you could make it, keep scrolling for more information about my education, personal interests and hobbies.</p>
           </div>
         </div>
 
@@ -88,19 +88,10 @@
           <div class="col-md-7 mb-5 mb-md-0" data-aos="fade-up">
             <p><img src="img/profile.jpeg" alt="Victoria" class="img-fluid"></p>
             <h3 class="h3 mb-4">Personal</h3>
-            <ul>
-              <li>taught coding/sociology</li>
-              <li>Salomé Design House</li>
-              <li>played soccer in my undergrad</li>
-            </ul>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor dignissimos delectus minima reprehenderit
-              molestias illo dolorem et, odio!</p>
-            <p>Fuga fugit distinctio delectus iure vitae consequatur excepturi, mollitia, consectetur molestias sapiente
-              rem consequuntur, illum adipisci, sed obcaecati!</p>
-            <p>Ex, dolorem qui voluptas reprehenderit provident, ad ipsum iure a consequatur voluptatem incidunt nobis.
-              Vitae reiciendis quae ex.</p>
-            <p>Optio consectetur culpa nemo, fugit pariatur veniam voluptate laudantium rerum fuga dolor in maiores ea
-              nisi voluptatibus. Minus?</p>
+            <p>I'm interested in finding interdisciplinary connections between product experiences and emotional responses through the lens of UX principles and feature requirements.</p>
+            <p>By translating the intangibles of a human experience into relevant tasks for joy and comfort with the end user, maintaining a user-centered approach can maximize the overall product value.</p>
+            <p>My personal journey has given me the opportunity to gain a breadth of knowledge inspiring this approach to product development and design, while picking up critical technical skills to provide functional and relevant insights into problems as they arise.</p>
+            <p>In my spare time, you might find me designing podcast covers, watching the office, or hanging out with my pups.</p>
           </div>
 
         </div>
